--- a/RocketChatInverted.css
+++ b/RocketChatInverted.css
@@ -5,7 +5,7 @@ Created by: JakeBathman
 Based on: https://userstyles.org/styles/133150/rocketchat-dark
 Repository: https://github.com/jakebathman/Rocket-Chat-Inverted
 Licence: MIT
-Version: v1.0.2
+Version: v1.0.3
 
 ***********/
 
@@ -31,6 +31,10 @@ code {
 
 .side-nav .footer {
     background-color: #0c0c0c !important;
+}
+
+.flex-nav footer {
+    background-color: #191919;
 }
 
 .fixed-title {
